objects/agf__ADM_Column_Status_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>agf__Column__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Column</label>
        <referenceTo>agf__ADM_Column__c</referenceTo>
        <relationshipLabel>Column Status Assignments</relationshipLabel>
        <relationshipName>Column_Status_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work Status</label>
        <referenceTo>agf__ADM_Work_Status__c</referenceTo>
        <relationshipLabel>Column Status Assignments</relationshipLabel>
        <relationshipName>Column_Status_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Column Status Assignment</label>
    <nameField>
        <displayFormat>CSA-{000000}</displayFormat>
        <label>Column Status Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Column Status Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>